<resources>
    <string name="app_name">TransitTrack</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="get_google_calendar_button_text">Get Google Calendar</string>
    <string name="upload_file_button_text">Upload Calendar File</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="add_friend_button_text">Add Friend</string>
    <string name="welcome_text">Welcome to TransitTrack!</string>
    <string name="address_edit_text_hint">Please Enter a Default Address.</string>
    <string name="friend_direct_message_button_text">Chat</string>
    <string name="friend_route_button_text">Route</string>
    <string name="title_directions">Directions</string>
    <string name ="title_friends">Friends</string>
    <string name="title_calendar">Calendar</string>
</resources>