...


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/messageEdit"
        android:visibility="gone"
        tools:visibility="gone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_design"
        android:padding="8dp"
        android:hint="Message..."
        android:textSize="16sp"
        android:layout_toStartOf="@id/sendBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/messageEdit" />

    <TextView
...
